User-and System-Requirements + Rechtschreibung

--- a/Semesterprojekt/src/branching-struktur.tex
+++ b/Semesterprojekt/src/branching-struktur.tex
@@ -1,4 +1,4 @@
-Unter der Annahme, dass die vorhandenen module kein Monorepo sind, werden wir diesen Aufbau beibehalten.
+Unter der Annahme, dass die vorhandenen Module kein Monorepo sind, werden wir diesen Aufbau beibehalten.
 Somit wird es ein Repository für die App geben und eins für die Software der Hardwarekomponente.
 
 
@@ -13,7 +13,7 @@ Sind die Änderungen abgeschlossen, so wird von Develop gerebased und anschließ
 Hier wird gesquashed und Conventional Commits sind verpflichtend.
 Analog verhält es sich mit Hotfix Branches, zur Main Branch.
 Hotfixes dienen dabei dem schnellen fixen von kritischen Bugs in der Produktion.
-Der name von Feature Branches beginnt dabei mit \qq{feature/} und der von Hotfix Branches mit \qq{hotfix/}.
+Der Name von Feature Branches beginnt dabei mit \qq{feature/} und der von Hotfix Branches mit \qq{hotfix/}.
 
 
 Die Aufgabe vom Develop Branch ist es, die Features zusammenzuführen.
