--- a/Semesterprojekt/src/continous-integration-and-deployment.tex
+++ b/Semesterprojekt/src/continous-integration-and-deployment.tex
@@ -27,7 +27,7 @@ Dies ist im Folgenden unter annahme bestehender Git Repositories auf einem selbs
                 \item Gibt dieser sein OK, so wird die Merge Request gemerged.
                 \item Sind alle anderen Features auch bereit für den Release, so wird nun eine Merge Request in Staging gestellt.
                 \item Gibt das ganze (anwesende) Team sein OK, so wird die Pipeline gemerged;
-                    Die App wird auf dem Testing Track veröffentlicht
+                    Die App wird auf dem Testing Track veröffentlicht.
                 \item Da die App vorbereitet ist, kann nun auch die Entwicklung der Software für die Klingel--Hardware entwickelt werden.
                     In der Praxis kann dies auch Parallel passieren.
                     Hierzu wird auch in diesem Repository der Branch \qq{feature/foobar} mit Upstream Develop erstellt.
