--- a/Semesterprojekt/src/kontextmodell.tex
+++ b/Semesterprojekt/src/kontextmodell.tex
@@ -9,16 +9,16 @@ Hinzugefügt werden Apps für Android sowie iOS Apps und die Hardware für die K
 Diese werden an das vorhandene Backend angebunden, welches entsprechend erweitert wird.
 
 
-Die Prozess-visualisierungs-software ist dabei die vorhandene TEKLOTH Software.
-Hier müssen die Kameras und Fluss definition für Anrufe und die Konfiguration des Systems im Allgemeinen geschehen.
+Die Prozess-Visualisierungs-Software ist dabei die vorhandene TEKLOTH Software.
+Hier müssen die Kameras und Fluss Definition für Anrufe und die Konfiguration des Systems im Allgemeinen geschehen.
 
 
-Das Backend ist das existierende Backend der Prozess-visualisierungs-software und soll um die benannte REST Schnittstellen erweitert werden.
+Das Backend ist das existierende Backend der Prozess-Visualisierungs-Software und soll um die benannte REST Schnittstellen erweitert werden.
 Hier werden auch die Streams und das SIP Protokoll eingebunden.
-Auch werden Push benachrichtigungen hier ausgelöst.
+Auch werden Push-Benachrichtigungen hier ausgelöst.
 
 
-Die App ist eine App zur bedienung der Klingelanlage durch Privatnutzer, primär Wohnungsbesitzer.
+Die App ist eine App zur Bedienung der Klingelanlage durch Privatnutzer, primär Wohnungsbesitzer.
 Sie wird mit einem Cross--Platform Framework umgesetzt und ist deshalb lediglich ein Modul.
 
 
