--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -82,11 +82,17 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \title{Semesterprojekt}
-\author{Nik Benson, Marco Kanera, <name> und <name>}
+\author{Nik Benson, Marco Kanera und David Edward Ssebuliba}
 
 \begin{document}
     \pagenumbering{gobble}
     \include{title}
+    
+
+    Unser viertes Gruppenmitglied Hussein Mislemani hat seine vereinbarten Aufgabenteile leider nicht erledigt.
+    Wir haben dementsprechend versucht die fehlenden Teile in kurzer Zeit noch nachzuholen.
+    \pagebreak
+
 
     \pagenumbering{Roman}
     \tableofcontents
