--- a/Semesterprojekt/src/persona-stories.tex
+++ b/Semesterprojekt/src/persona-stories.tex
@@ -10,7 +10,7 @@
     Diese vermietet sie an Tilo.
     Das erste Jahr gab es keine Probleme, aber mit der Zeit hat sich der zugezogene Tilo Feinde gemacht.
     Jetzt wird die Haustür fast wöchentlich beschmiert.
-    Zita möchte die Anlage installieren, auch um die Vandaliste zu erwischen.
+    Zita möchte die Anlage installieren, auch um die Vandalisten zu erwischen.
 
 
 \paragraph{\large{Wartungsmitarbeiter einer Industriefirma}}
@@ -27,4 +27,4 @@
     Dazu übernachtet er im Hotel \qq{Zur guten Übernachtung}.
     Wenn er abends erschöpft von der Montage ins Hotel kommt, hat er meistens noch nicht gegessen.
     Von der Software erhofft er sich eine einfache Kommunikation mit dem Zimmerservice.
-    Auch hofft er, dass er seinen Kollegen im Nebenzimmer morgen aus der Dusche klingeln kann.
+    Auch hofft er, dass er seinen Kollegen im Nebenzimmer morgens aus der Dusche klingeln kann.
