--- a/Semesterprojekt/src/produkt-roadmap.tex
+++ b/Semesterprojekt/src/produkt-roadmap.tex
@@ -1,4 +1,4 @@
-Nicht nur die Kundengruppe, sondern auch das Integrieren in vorhandene Subsysteme ist ein Wichtiger Bestandteil dieses Projekts. Im Folgenden sind die neuen Komponenten in bezug zueinander sowie zu den Altsystemen gesetzt und weiter ausgearbeitet.
+Nicht nur die Kundengruppe, sondern auch das Integrieren in vorhandene Subsysteme ist ein wichtiger Bestandteil dieses Projekts. Im Folgenden sind die neuen Komponenten in Bezug zueinander sowie zu den Altsystemen gesetzt und weiter ausgearbeitet.
 
 \subsection{Kontextmodell}\label{subsec:kontextmodell}
     \input{kontextmodell}
