--- a/Semesterprojekt/src/produkt-strategie.tex
+++ b/Semesterprojekt/src/produkt-strategie.tex
@@ -13,5 +13,9 @@ In diesem Abschnitt sind die potenziellen Neu-- sowie Bestandskunden aufgeführt
     \input{anwendungsfälle}
 
 
+\subsection{User- und System-Requirements}\label{subsec:user-and-system-requirements}
+    \input{user-and-system-requirements}
+
+
 \subsection{User--stories}\label{subsec:user-stories}
     \input{user-stories}
