--- a/Semesterprojekt/src/produktvision.tex
+++ b/Semesterprojekt/src/produktvision.tex
@@ -1,5 +1,5 @@
-Die Kundengruppe sind nutzer der TEKLOTH Software.
+Die Kundengruppe sind Benutzer der TEKLOTH Software.
 Ziel ist es, eine Videoanrufsoftware nach dem SIP Standard zu implementieren, die mit der vorhandenen Software kompatibel ist.
 In der TEKLOTH Software soll das Bild eingebunden werden und der Administrator soll den Anruf verwalten können.
 Ein angeforderter Anruf soll dabei über eine automatische Support-Kette an den höchst priorisierten Administrator, der Zeit hat, weiter geleitet werden.
-Auch soll eine Klinge funktion sowie eine Peer-to-Peer anruffunktion implementiert werden.
+Auch soll eine Klingelfunktion sowie eine Peer-to-Peer Anruffunktion implementiert werden.
