feat(semesterprojekt): schichtenmodell

--- a/Semesterprojekt/src/produkt-roadmap.tex
+++ b/Semesterprojekt/src/produkt-roadmap.tex
@@ -3,8 +3,14 @@ Nicht nur die Kundengruppe, sondern auch das Integrieren in vorhandene Subsystem
 \subsection{Kontextmodell}\label{subsec:kontextmodell}
     \input{kontextmodell}
 
+
 \subsection{Komponentendiagramm}\label{subsec:komponentendiagramm}
     \input{komponentendiagramm}
+
+
+\subsection{Schichtenmodell}\label{subsec:schichtenmodell}
+    \input{schichtenmodell}
+
 
 \subsection{Continous Integration / Deployment}\label{subsec:continous-integration-and-deployment}
     \input{continous-integration-and-deployment}
