--- a/Semesterprojekt/src/produkt-strategie.tex
+++ b/Semesterprojekt/src/produkt-strategie.tex
@@ -1,4 +1,4 @@
-Das ziel der Software ist es, die Hausautomatisierungssoftware der Firma TEKLOTH attraktiver zu gestalten.
+Das Ziel der Software ist es, die Hausautomatisierungssoftware der Firma TEKLOTH attraktiver zu gestalten.
 In diesem Abschnitt sind die potenziellen Neu-- sowie Bestandskunden aufgeführt und detailliert beschrieben.
 
 \subsection{Persona-Stories}\label{subsec:persona-stories}
@@ -13,8 +13,12 @@ In diesem Abschnitt sind die potenziellen Neu-- sowie Bestandskunden aufgeführt
     \input{anwendungsfälle}
 
 
-\subsection{User- und System-Requirements}\label{subsec:user-and-system-requirements}
+\subsection{User-- und System--Requirements}\label{subsec:user-and-system-requirements}
     \input{user-and-system-requirements}
+
+
+\subsection{Sequenzdiagramme}\label{subsec:sequenzdiagramme}
+    \input{sequenzdiagramme}
 
 
 \subsection{User--stories}\label{subsec:user-stories}
