fix(semesterprojekt): references

--- a/Semesterprojekt/src/anwendungsfälle.tex
+++ b/Semesterprojekt/src/anwendungsfälle.tex
@@ -9,7 +9,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
 \end{figure}
 
 \paragraph{\large{Klingel betätigen}}
-\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
+\textit{Siehe Abbildung~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Besucher möchte klingeln.
         \item[Beschreibung:] Klingel wird betätigt, um Kontakt zu Wohnungsbesitzer aufzunehmen.
@@ -20,7 +20,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Anruf annehmen}}
-\textit{Siehe Abbildungen ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}, ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
+\textit{Siehe Abbildungen~\ref{fig:klingeln-bei-einem-mehrfamilienhaus},~\ref{fig:industrieanlage-reparieren} und~\ref{fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Ein eingehender Anruf soll angenommen werden.
         \item[Beschreibung:] Indem der Benutzer auf die eingehende Benachrichtigung klickt, wird der Anruf angenommen.
@@ -32,7 +32,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Anruf ablehnen}}
-\textit{Siehe Abbildungen ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}, ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
+\textit{Siehe Abbildungen~\ref{fig:klingeln-bei-einem-mehrfamilienhaus},~\ref{fig:industrieanlage-reparieren} und~\ref{fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Ein eingehender Anruf soll abgelehnt werden.
         \item[Beschreibung:] Indem der Benutzer die eingehende Benachritigung wegklickt, wird der Anruf abgelehnt.
@@ -44,7 +44,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Anruf beenden}}
-\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}, ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
+\textit{Siehe Abbildung~\ref{fig:klingeln-bei-einem-mehrfamilienhaus},~\ref{fig:industrieanlage-reparieren} und~\ref{fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Ein laufender Anruf soll beendet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Auflegen betätigt, kann der Anruf jederzeit beendet werden.
@@ -55,7 +55,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
     
 \paragraph{\large{Live-Bild der Kamera anschalten}}
-\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
+\textit{Siehe Abbildung~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Live-Bild der Kamera an der Eingangstür soll angeschaltet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild angeschaltet.
@@ -67,7 +67,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Live-Bild der Kamera ausschalten}}
-\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
+\textit{Siehe Abbildung~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Live-Bild der Kamera an der Eingangstür soll ausgeschaltet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild ausgeschaltet.
@@ -79,7 +79,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Automatikschloss der Tür aufschließen}}
-\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
+\textit{Siehe Abbildung~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Automatikschloss der Eingangstür soll aufgeschlossen werden, um den Besucher ins Gebäude zu lassen.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss aufgeschlossen.
@@ -90,7 +90,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Automatikschloss der Tür zuschließen}}
-\textit{Siehe Abbildung ~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
+\textit{Siehe Abbildung~\ref{fig:klingeln-bei-einem-mehrfamilienhaus}}
     \begin{description}
         \item[Ziel:] Das Automatikschloss der Eingangstür soll zugeschlossen werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss zugeschlossen.
@@ -109,7 +109,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
 \end{figure}
 
 \paragraph{\large{Aufgezeichnetes Videomaterial einsehen}}
-\textit{Siehe Abbildung ~\ref{fig:vandalismus}}
+\textit{Siehe Abbildung~\ref{fig:vandalismus}}
     \begin{description}
         \item[Ziel:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, soll eingesehen werden.
         \item[Beschreibung] Über die Visualisierung kann der Benutzer, über eine Liste, die Kamera auswählen, von der er das aufgezeichnete Videomaterial einsehen möchte.
@@ -129,7 +129,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
 \end{figure}
 
 \paragraph{\large{Anruf weiterleiten}}
-\textit{Siehe Abbildung ~\ref{fig:industrieanlage-reparieren}}
+\textit{Siehe Abbildung~\ref{fig:industrieanlage-reparieren}}
     \begin{description}
         \item[Ziel:] Ein eingehender Anruf soll an einen ausgewählten Kontakt weitergeleitet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Weiterleiten betätigt, kann der eingehende Anruf an einen verfügbaren Kontakt weitergeleitet werden.
@@ -142,7 +142,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Kontakt suchen und auswählen}}
-\textit{Siehe Abbildungen ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
+\textit{Siehe Abbildungen~\ref{fig:industrieanlage-reparieren} und~\ref{fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Der Benutzer hat einen gesuchten Kontakt ausgewählt, wenn es ihn gibt.
         \item[Beschreibung:] Über eine Liste in der Visualisierung, eventuell auch Favoritenliste, kann der Benutzer einen Kontakt auswählen.
@@ -154,7 +154,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Kontakt anrufen}}
-\textit{Siehe Abbildungen ~\ref{fig:industrieanlage-reparieren} und ~\ref{fig:fig:zimmerservice}}
+\textit{Siehe Abbildungen~\ref{fig:industrieanlage-reparieren} und~\ref{fig:zimmerservice}}
     \begin{description}
         \item[Ziel:] Der Benutzer startet einen Anruf mit dem ausgewählten Kontakt.
         \item[Beschreibung:] Hat der Benutzer einen Kontakt ausgewählt, kann er diesen über einen Button anrufen.
@@ -165,7 +165,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Bildschirmfreigabe starten}}
-\textit{Siehe Abbildung ~\ref{fig:industrieanlage-reparieren}}
+\textit{Siehe Abbildung~\ref{fig:industrieanlage-reparieren}}
     \begin{description}
         \item[Ziel:] Die Bildschirmfreigabe soll gestartet werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird sein Bildschirm mit dem anderen Teilnehmer des Anrufs geteilt.
@@ -177,7 +177,7 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
     \end{description}
 
 \paragraph{\large{Bildschirmfreigabe stoppen}}
-\textit{Siehe Abbildung ~\ref{fig:industrieanlage-reparieren}}
+\textit{Siehe Abbildung~\ref{fig:industrieanlage-reparieren}}
     \begin{description}
         \item[Ziel:] Die Bildschirmfreigabe soll gestoppt werden.
         \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Teilen seines Bildschirms mit dem anderen Teilnehmer des Anrufs gestoppt.
